--- a/Parties/data.yml
+++ b/Parties/data.yml
@@ -106,6 +106,12 @@ players:
   e8030a63-351d-4b38-aa17-7c663c31d12f:
     party: whohurtyou
     rank: 10
+  2357ee1a-0c09-4375-8412-adfb7595762d:
+    party: justice
+    rank: 20
+  4ff867f5-6cab-413e-9fad-e4d77ca48778:
+    party: ttttt
+    rank: 5
 parties:
   anti:
     leader: 34a87619-4b40-4ae8-b759-3efa25bbbffd
@@ -165,6 +171,7 @@ parties:
     - e6de8cf0-af45-44e4-882f-d98446f4b31b
     - d0b35aee-f6af-44ff-84ed-6342e8370492
     - fbb8c072-4c4b-49c8-948b-26e8ad73099e
+    - 4ff867f5-6cab-413e-9fad-e4d77ca48778
   VenusLabs:
     leader: e207f46f-ac40-4f49-8b7d-2317c67f1bd0
     members:
@@ -194,3 +201,7 @@ parties:
     - e8030a63-351d-4b38-aa17-7c663c31d12f
     desc: who hurt you boo
     home: survival112,699,70,-106,349.75403,20.55001
+  justice:
+    leader: 2357ee1a-0c09-4375-8412-adfb7595762d
+    members:
+    - 2357ee1a-0c09-4375-8412-adfb7595762d
