--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -16,7 +16,7 @@ v2-logout:
     group: overvoid
   8354ed0d-09cb-4682-bf62-5df3f0e2b412:
     group: default
-    world: survival112
+    world: greenfield
   fa2821a9-27ed-43e0-99f6-e22aec572a35:
     group: default
     world: survival112
@@ -54,7 +54,7 @@ v2-logout:
     group: default
     world: greenfield
   9025e96a-d286-47b0-a709-98d2a4ee42db:
-    world: survival112
+    world: greenfield
     group: default
   9cb07b82-4d2f-446f-b194-4f83dee1e02f:
     group: fightclub
@@ -66,8 +66,8 @@ v2-logout:
     group: default
     world: greenfield
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
-    world: overvoid
-    group: overvoid
+    world: survival112
+    group: default
   ba21afd9-3335-4249-998f-0fd9547ac35a:
     group: crossfire
     world: crossfire
@@ -147,8 +147,8 @@ v2-logout:
     group: default
     world: greenfield
   87bb4f34-8ea7-4e22-a9a6-8c157cf33b1e:
-    group: escaperoom
-    world: escaperoom
+    group: default
+    world: survival112
   d0f9a8dd-4050-416a-a5f5-3750269f92f6:
     world: overvoid
     group: overvoid
@@ -171,8 +171,8 @@ v2-logout:
     group: default
     world: survival
   28556dea-667d-409f-b2ff-fb4177a20ff2:
-    world: overvoid
-    group: overvoid
+    world: greenfield
+    group: default
   2e9ef16a-5330-4344-b4b1-42aeb008071b:
     group: plots
     world: plots
@@ -250,7 +250,7 @@ v2-logout:
     world: survival112
   391762eb-24f6-4d95-84d6-bfac682d575a:
     group: default
-    world: atlantis
+    world: greenfield
   ffe95f1b-b799-43c4-b25c-69e2f8d1a420:
     group: default
     world: greenfield
@@ -310,13 +310,13 @@ v2-logout:
     world: greenfield
   b6fcbf5e-dd83-4d9e-93f7-0b1ff3465857:
     group: default
-    world: greenfield
+    world: survival112
   1fa2186c-3757-4963-8d88-52cf144ca747:
     group: default
     world: greenfield
   706e34e9-e166-4de1-9a0e-528bee0703b3:
     group: default
-    world: survival112
+    world: greenfield
   24d4ccf6-91f0-4d37-b132-66dbc89228e1:
     group: spleeflobby
     world: spleeflobby
@@ -2966,7 +2966,7 @@ v2-logout:
     group: default
     world: greenfield
   4ccbce1a-bc8f-4b0a-9072-9185b7b54e8d:
-    world: survival112
+    world: greenfield
     group: default
   48ae1382-b619-408e-b213-91be26f03945:
     group: default
@@ -3136,8 +3136,8 @@ v2-logout:
     group: default
     world: greenfield
   dffa9869-dc8d-4c1a-8055-3623ad136739:
-    world: greenfield
-    group: default
+    world: newminigamehub
+    group: newminigamehub
   6fed9a3a-e5c7-4da3-87ef-25ab920cd7a7:
     group: default
     world: greenfield
@@ -4083,8 +4083,8 @@ v2-logout:
     group: skywarslobby
     world: skywarslobby
   31a4a3a3-ff93-4cd5-b1a6-7f54006e250e:
-    group: deathmachine
-    world: deathmachine
+    group: default
+    world: greenfield
   f4796b23-9501-405e-a51f-5bd2f5155ce1:
     group: default
     world: greenfield
@@ -4356,8 +4356,8 @@ v2-logout:
     group: default
     world: greenfield
   82fd1c9e-f178-4c3d-a533-0575fd4460c0:
-    world: overvoid
-    group: overvoid
+    world: survival112
+    group: default
   c3dca926-2959-4c0f-a178-c11ea689b7c2:
     group: default
     world: greenfield
@@ -4727,5 +4727,38 @@ v2-logout:
     group: spawn
     world: spawn
   adb441e0-002e-4ddb-a7de-3559966eb775:
+    group: default
+    world: greenfield
+  6f4c8bf6-f5b6-4859-b75a-e47a7341ccca:
+    group: default
+    world: survival112_nether
+  23857be5-ec64-4903-a3fb-4853b27d95b8:
+    group: default
+    world: greenfield
+  46c4f1ec-e972-4fe2-ace6-432c25f76855:
+    group: default
+    world: survival112
+  f48eaa4e-5ab1-4454-b67b-0ef6c77d0dcc:
+    group: default
+    world: greenfield
+  5b0e7e5c-0ba5-4100-9d9a-dc0307435387:
+    group: default
+    world: greenfield
+  dd69690d-b57d-46c0-a0f1-d3c7cbfa45b9:
+    group: default
+    world: greenfield
+  1e996b16-fda4-4770-b73d-c80ba9df09ae:
+    group: default
+    world: survival112
+  4ad02055-ed4c-444e-8aa7-013fd1098106:
+    group: default
+    world: greenfield
+  3f687d03-da51-4693-8e41-c81a28e55b3e:
+    group: default
+    world: greenfield
+  7476fe7f-8ce5-4a05-8020-5fe67db20142:
+    group: default
+    world: survival112
+  d75feee3-7791-4923-ba1f-4456ba72c270:
     group: default
     world: greenfield
