--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,17 @@
 groups:
+  scorpion:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&2Sco&arp&2ion'
+      suffix: '&a'
+    worlds:
+      survival112:
+        permissions:
+        - ch.alias.carryplayer
+        - ch.alias.dismountplayer
+        - Magic.commands.cast
+        - Magic.cast.acidshot
   mysterio:
     inheritance:
     - commonherotraits
