--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -17676,7 +17676,7 @@ users:
       name: BlueTroubleGamer
   9025e96a-d286-47b0-a709-98d2a4ee42db:
     group:
-    - vibe
+    - firestormraymondstein
     options:
       name: Tony_MCU
     permissions: []
