--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -66,7 +66,7 @@ v2-logout:
     group: default
     world: greenfield
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
-    world: survival112
+    world: atlantis
     group: default
   ba21afd9-3335-4249-998f-0fd9547ac35a:
     group: crossfire
@@ -171,8 +171,8 @@ v2-logout:
     group: default
     world: survival
   28556dea-667d-409f-b2ff-fb4177a20ff2:
-    world: greenfield
-    group: default
+    world: office
+    group: office
   2e9ef16a-5330-4344-b4b1-42aeb008071b:
     group: plots
     world: plots
@@ -180,8 +180,8 @@ v2-logout:
     group: default
     world: greenfield
   4ff867f5-6cab-413e-9fad-e4d77ca48778:
-    world: greenfield
-    group: default
+    world: office
+    group: office
   60b8ea61-b653-4cc5-8c7f-06db0ec25507:
     group: default
     world: greenfield
@@ -4084,7 +4084,7 @@ v2-logout:
     world: skywarslobby
   31a4a3a3-ff93-4cd5-b1a6-7f54006e250e:
     group: default
-    world: greenfield
+    world: atlantis
   f4796b23-9501-405e-a51f-5bd2f5155ce1:
     group: default
     world: greenfield
