--- a/Magic/defaults/wands.defaults.yml
+++ b/Magic/defaults/wands.defaults.yml
@@ -1416,6 +1416,24 @@ rocketboots:
     glow: true
     protection_falling: 1
 
+science:
+  inherit: base_wand
+  icon: wood_hoe:6
+  active_spell: levitate|5
+  cost_reduction: 2
+  cooldown_reduction: 2
+  hotbar_count: 2
+  spells:
+  - levitate|5
+  - blink|6
+  - birth_hunter
+  - birth_worm
+  - birth_virus
+  - birth_defender
+  - counterspell|2
+  - blast|4
+  - disintegrate
+  - phase
 skillbook:
     mode: cast
     active_spell: skills
