--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,18 @@
 groups:
+  sandman:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&eSa&6nd&2ma&7n'
+      suffix: '&e'
+    worlds:
+      survival112:
+        permissions:
+        - ch.alias.grow
+        - ch.alias.normalsize
+        - Magic.commands.cast
+        - Magic.cast.sandwall
+        - essentials.fly
   mysterio:
     inheritance:
     - commonherotraits
