--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,16 @@
 groups:
+  hobgoblin:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&6H&9o&6b&9Gob&6lin'
+      suffix: '&e'
+    worlds:
+      survival112:
+        permissions:
+        - essentials.speed.fly
+        - essentials.speed
+        - essentials.fly
   mysterio:
     inheritance:
     - commonherotraits
